<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_google">Login with Google</string>
    <string name="choose_team_name">Choose the team name</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="share">Share</string>
    <string name="add_new_pokemon">add new pokemon</string>
    <string name="delete_team">delete team</string>
    <string name="copy">copy</string>
    <string name="edit_pokemon">Edit your pokemon</string>
    <string name="enter_description">enter description</string>
    <string name="enter_type">enter type pokemon</string>
    <string name="enter_new_pokemon_name">enter new pokemon name</string>
    <string name="enter_token_to_copy_team">Enter token to copy the team</string>
    <string name="enter_token">token</string>
</resources>