<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="24dp"
    android:focusable="true"
    android:clickable="true">

    <ImageView
        android:id="@+id/linea_desple"
        android:layout_width="48dp"
        android:layout_height="4dp"
        app:tint="@color/linea_bottomsheet"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/button_login_disabled"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linea_desple"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewEdit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_height="match_parent">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uni_neue_bold"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivEdit"
                    android:text="@string/edit" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewDelete"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/cardViewEdit">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_height="match_parent">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivDelete"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uni_neue_bold"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ivDelete"
                    app:layout_constraintStart_toStartOf="@+id/ivDelete"
                    app:layout_constraintTop_toBottomOf="@+id/ivDelete"
                    android:text="@string/delete" />
            </androidx.constraintlayout.widget.ConstraintLayout>




        </com.google.android.material.card.MaterialCardView>

        <!--Share-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewShare"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/cardViewDelete">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_height="match_parent">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivShare"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uni_neue_bold"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ivShare"
                    app:layout_constraintStart_toStartOf="@+id/ivShare"
                    app:layout_constraintTop_toBottomOf="@+id/ivShare"
                    android:text="@string/share" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Token: "

            android:layout_marginTop="8dp"
            android:fontFamily="@font/uni_neue_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewEdit" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uni_neue_bold"
            android:text="fb42f916"
            app:layout_constraintStart_toEndOf="@+id/tvTitleToken"
            app:layout_constraintTop_toTopOf="@+id/tvTitleToken" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTokenDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uni_neue_regular"
            android:layout_marginBottom="8dp"
            android:text="Share this token with your friends and allow to copy you team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleToken" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>